--- a/.github/workflows/sca_action_sarif.yml
+++ b/.github/workflows/sca_action_sarif.yml
@@ -28,6 +28,7 @@ jobs:
           project_name: "soos-io/soos-sca-sarif-example"
           sarif: "true"
           gpat: ${{ secrets.SOOS_GITHUB_PAT }}
+          base_uri: "https://dev-api.soos.io/api/"
         env:
           # Visit https://soos.io to get the required tokens to leverage SOOS scanning/analysis services
           SOOS_CLIENT_ID: ${{ secrets.SOOS_CLIENT_ID }}
